tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-37/test000007.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c
Line: 17
Stack: 
	#0 00000045 in remove_from_list (head=53324032, node=53443200) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:17
	#1 00000090 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:40
Info: 
	address: (Add w64 16
         (ReadLSB w64 8 a1))
	example: 16
	range: [0, 18446744073709551615]
	next: object at 53323520 of size 8
		MO11[8] allocated at main():  %a0 = alloca %struct.Node_t**
